compiler/tests/en/errors/nonconst_size.salam
// EXPECT: E011
func main:
    mut n := 3
    a := [1, 2, 3] as int[n]
end
